--- a/blogs_news/templates/login.html
+++ b/blogs_news/templates/login.html
@@ -3,12 +3,15 @@
     
     <head>
       <title>{% block title %}My Web App{% endblock %}</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-      
-    </head>
-    <body style="
-    background: steelblue;">
-    
+      <style>
+        .body-bg {
+      background-image: url('../static/mypics/ww.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;}
+  </style>
+  
+      </head>
+      <body class= "body-bg">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">My Web App</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
